# PythonProject_Twitter_Clone_Backend

Backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  init_db.sql  pyproject.toml  requirements.txt
Backend/app/: __init__.py  main.py
Backend/app/api/: deps.py
Backend/app/api/v1/: __init__.py
Backend/app/api/v1/endpoints/: medias.py  tweets.py  users.py
Backend/app/core/: config.py
Backend/app/crud/: media.py  tweet.py  user.py
Backend/app/db/: base.py  session.py
Backend/app/models/: media.py  tweet.py  user.py
Backend/app/schemas/: media.py  tweet.py  user.py
Backend/migrations/: env.py
Backend/static/: index.html
Backend/tests/: conftest.py  test_api.py  test_crud.py
