[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "Q"]
ignore = ["E501"]

[tool.ruff.lint.pytest]
enable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --strict-markers"
markers = [
    "unit: unit tests",
    "integration: integration tests"
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = false
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
